overflow fixed on main page

--- a/src/MainPage/MainPage.css
+++ b/src/MainPage/MainPage.css
@@ -1,134 +1,138 @@
+.main-page-viewport {
+  overflow-x: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
 .main-page-container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--background);
-    overflow-x: hidden;
-    overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: var(--background);
 }
 .main-header-main {
-    font-size: 60px;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top:20px;
-    font-family: var(--font-fam1);
-    font-weight: 600;
-    width: max-content;
-    margin-top: 0;
+  font-size: 60px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 20px;
+  font-family: var(--font-fam1);
+  font-weight: 600;
+  width: max-content;
+  margin-top: 0;
 }
 
 #left-button-main {
-    position: absolute;
-    left: 40px;
-    top:40px;
+  position: absolute;
+  left: 40px;
+  top: 40px;
 }
 
 #right-button-main {
-    position: absolute;
-    right: 40px;
-    top:40px;
+  position: absolute;
+  right: 40px;
+  top: 40px;
 }
 
 .lists-container-main {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    position: absolute;
-    top: 150px;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  position: absolute;
+  top: 150px;
 }
 
 #left-low-button-main {
-    position: absolute;
-    bottom: 40px;
-    left: 450px;
+  position: absolute;
+  bottom: 40px;
+  left: 450px;
 }
 
 #right-low-button-main {
-    position: absolute;
-    bottom: 40px;
-    right: 450px;
+  position: absolute;
+  bottom: 40px;
+  right: 450px;
 }
-
 
 /* ____________________________PROFIL PAGE_____________________________ */
 #left-button-profile {
-    position: absolute;
-    left: 40px;
-    top:40px;
+  position: absolute;
+  left: 40px;
+  top: 40px;
 }
 
 #right-button-profile {
-    position: absolute;
-    right: 40px;
-    top:40px;
+  position: absolute;
+  right: 40px;
+  top: 40px;
 }
 
 #bottom-button-profile {
-    position: absolute;
-    bottom: 40px;
-    right: 0;
-    left:0;
-    margin-left: auto;
-    margin-right: auto;
+  position: absolute;
+  bottom: 40px;
+  right: 0;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .profil-page-container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    right:-100%;
-    background-color: var(--background);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  right: -100%;
+  background-color: var(--background);
 }
 
 .profil-header-main {
-    color: var(--primary-font-dark);
-    font-size: 60px;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top:20px;
-    font-family: var(--font-fam1);
-    font-weight: 600;
-    width: max-content;
-    margin-top: 0;
+  color: var(--primary-font-dark);
+  font-size: 60px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 20px;
+  font-family: var(--font-fam1);
+  font-weight: 600;
+  width: max-content;
+  margin-top: 0;
 }
 
 .info-container-profile {
-    width: 100%;
-    height: 80%;
-    position: absolute;
-    bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    font-size: 22px;
+  width: 100%;
+  height: 80%;
+  position: absolute;
+  bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  font-size: 22px;
 }
 
 .wiadomosci-info-profile {
-    background-color: var(--primary-shade);
-    border-radius: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    color: var(--primary-font-light);
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.5);
+  background-color: var(--primary-shade);
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: var(--primary-font-light);
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.5);
 }
 
 .slowa-info-profile {
-    background-color: var(--primary-shade);
-    border-radius: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    color: var(--primary-font-light);
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.5);
+  background-color: var(--primary-shade);
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: var(--primary-font-light);
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.5);
 }
